--- a/paper/TODO.txt
+++ b/paper/TODO.txt
@@ -1,3 +1,13 @@
+16/12/2015
+
+- subsectioning
+- messages
+- tables with nice row/col labels
+- formula cleanup
+- SAS
+- demographics plots
+- acknowledgements: software, NSF grant 
+
 15/12/2015
 
 - chunk options, ermove messages
