--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,15 +1,15 @@
-@online{MTurk,
+@misc{MTurk,
   author = {Amazon.com Inc.},
   title = {Amazon Mechanical Turk},
   year = {2005},
-  url = {https://www.mturk.com/mturk/welcome},
+  url = {\url{https://www.mturk.com/mturk/welcome}},
   urldate = {2015-04-29}
 }
 
 @article{Buja,
   ISSN = {1364503X},
    URL = {http://www.jstor.org/stable/40485732},
-   author = {Andreas Buja, Dianne Cook, Heike Hofmann, Michael Lawrence, Eun-Kyung Lee, Deborah F. Swayne, Hadley Wlckham},
+   author = {Andreas Buja and Dianne Cook and Heike Hofmann and Michael Lawrence and Eun-Kyung Lee and Deborah F. Swayne and Hadley Wlckham},
    journal = {Philosophical Transactions: Mathematical, Physical and Engineering Sciences},
  
   number = {1906},
@@ -116,7 +116,7 @@
   year = {1981},
 }
 
-@online{Friendly,
+@misc{Friendly,
   author = {M. Friendly, D. J. Dennis},
   title = {Milestones in the History of Thematic Cartography, Statistical Graphics, and Data Visualisation},
   year = {2001},
@@ -127,7 +127,7 @@
 @article{Harrison, 
   author={Harrison, L. and Fumeng Yang and Franconeri, S. and Chang, R.}, 
   journal={Visualization and Computer Graphics, IEEE Transactions on}, 
-  title={Ranking Visualizations of Correlation Using Weber #x0027;s Law}, 
+  title={Ranking Visualizations of Correlation Using Weber's Law}, 
   year={2014}, 
   volume={20}, 
   number={12}, 
@@ -276,7 +276,7 @@ url = {http://EconPapers.repec.org/RePEc:eee:moneco:v:10:y:1982:i:2:p:139-162}
   url={https://ideas.repec.org/a/ecm/emetrp/v57y1989i6p1361-1401.html}
 }
 
-@online{Robbins,
+@misc{Robbins,
   author = {N. Robbins},
   title = {Plotting Differences: Don't Make Your Readers Do the Maths},
   year = {2012},
@@ -284,7 +284,7 @@ url = {http://EconPapers.repec.org/RePEc:eee:moneco:v:10:y:1982:i:2:p:139-162}
   urldate = {2015-05-01}
 }
 
-@online{Sachs,
+@misc{Sachs,
   author = {J. Sachs},
   title = {1786/1801: William Playfair, Statistical Graphics, and the Meaning of an Event},
   year = {2015},
@@ -306,7 +306,7 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@online{Tuck,
+@misc{Tuck,
   author = {M. Tuck},
   title = {Gestalt Principles Applied in Design},
   year = {2010},
@@ -361,8 +361,8 @@ url={http://dx.doi.org/10.1007/BF00410640},
 publisher={Springer-Verlag},
 author={Wertheimer, Max},
 pages={301-350},
-language={German}
-note={trans. W. Ellis, 'A sourcebook of Festalt psychology', London, Routledge & Kegan Paul, 1938}
+language={German},
+note={trans. W. Ellis, 'A sourcebook of Gestalt psychology', London, Routledge \& Kegan Paul, 1938}
 }
 
 @article{Wickham,
