--- a/paper/paper.Rnw
+++ b/paper/paper.Rnw
@@ -81,6 +81,7 @@ library(lme4)
 library(ggplot2)
 library(mnormt)
 library(tidyr)
+library(knitr)
 # Convert reshape2 to tidyr, melt to gather - done
 #library(reshape2)
 library(nullabor)
@@ -517,10 +518,11 @@ There are two major reasons why a subject may fail to detect the true plot out o
 
 \begin{figure}[htbp]
   \centering
-<<pins, dependson='samplesize', fig.width=6, fig.height=10, out.width='0.7\\textwidth', echo=FALSE>>=
+<<pins, dependson='samplesize', fig.width=6, fig.height=10, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE>>=
 # correl <- read.csv("correlations.csv") # You have already read this
 count.setup <- select(full, pic_id, response_0, actual_location, 
-              test_param, smoothed, n) #full[,c(5, 6, 10, 15, 16, 17)]
+              test_param, smoothed, n)
+count.setup$response_0 <- as.character(count.setup$response_0) #full[,c(5, 6, 10, 15, 16, 17)]
 # Need to use the tidyr commands instead of cSplit
 # Here's where we will need to make some changes to incorporate the multiple picks
 #pin <- pin %>% transform(response_0= strsplit(as.character(response_0), ",")) %>% unnest(response_0)
@@ -533,16 +535,15 @@ counts <- data.frame(table(count.setup$pic_id, count.setup$choice))
 counts$Var1 <- as.numeric(as.character(counts$Var1))
 counts$Var2 <- as.numeric(as.character(counts$Var2))
 colnames(counts) <- c("lineup", "plot", "count")
-pin <- merge(counts, Turk, by.x="lineup", by.y="pic_id")
-pin <- select(pin, lineup, plot.x, count, smoothed, true_pos, n, test_param, r)#pin[,c(1, 2, 3, 12, 13, 15, 11, 20)]
+pin <- merge(counts, Turk[-19], by.x="lineup", by.y="pic_id")
+pin <- select(pin, lineup, plot, count, smoothed, true_pos, n, test_param, r)#pin[,c(1, 2, 3, 12, 13, 15, 11, 20)]
 pin$r <- factor(pin$r)
 colnames(pin) <- c("lineup", "plot", "count", "smoothed", "true_pos", "n", "design", "r")
 pin <- mutate(pin, design=ifelse(design=="scatter", "Scatterplot", "Overlaid Lines"))#, smoothed=ifelse(smoothed=="no", 0, 1))
 pin$base <- 0
 pin$Correlation <- diag(as.matrix(correl[pin$lineup, (pin$plot+2)]))
-pin <- mutate(pin, true = ifelse(plot==true_pos, "True plot", "Null plot"))
-pin <- merge(pin, Turk[,c(2, 16)], by.x = "lineup", by.y = "pic_id")
-pin <- mutate(pin, percent = count/attempt)
+pin <- mutate(pin, true = ifelse(plot==true_pos, "True plot", "Null plot"), percent = count/attempt)
+#pin <- merge(pin, Turk[,c(2, 16)], by.x = "lineup", by.y = "pic_id")
 pin.a <- ggplot(data=filter(pin, smoothed==0 & design == "Scatterplot")) + geom_errorbar(aes(x=Correlation, ymin=base, ymax=percent, colour=true)) +
        geom_point(aes(x=Correlation, y=percent, colour=true)) + coord_fixed() + facet_grid(n~r) + labs(title="Unsmoothed Scatterplot", y="Percent Chosen") + theme(legend.position="none")
 pin.b <- ggplot(data=subset(pin, smoothed==1 & design == "Scatterplot")) + geom_errorbar(aes(x=Correlation, ymin=base, ymax=percent, colour=true)) +
@@ -602,25 +603,27 @@ full.sub$rabs <- abs(full.sub$r)
 full.sub$plot <- ifelse(full.sub$test_param == 0, "S", "L")
 full.sub <- select(full.sub, subj_id, correct, r, rsgn, rabs, smoothed, n, plot, log_time, response_0, actual_location)#[,c(1,7, 15,16,17,20:26)]
 full.sub$attempts <- sapply(strsplit(as.character(full.sub$response_0), ","), length)
-#full.sub$weights = 1/(full.sub$attempts) #weights are actually number of attempts in the glm
-#full.sub <- full.sub %>% transform(response_0= strsplit(as.character(response_0), ",")) %>% unnest(response_0)
-#full.sub$correct <- ifelse(full.sub$response_0 == full.sub$actual_location, 1, 0) #fixing correct for multiple guesses
+full.sub$weights = 1/(full.sub$attempts) #weights are actually number of attempts in the glm
+full.sub <- full.sub %>% transform(response_0= strsplit(as.character(response_0), ",")) %>% unnest(response_0)
+full.sub$correct <- ifelse(full.sub$response_0 == full.sub$actual_location, 1, 0) #fixing correct for multiple guesses
 #full.sub$rpos <- ifelse(full.sub$r > 0, full.sub$r, 0)
 #full.sub$rneg <- ifelse(full.sub$r < 0, full.sub$r, 0)
 full.sub$alpha <- log(.05/0.95)
-full.sub$correct.prop <- full.sub$correct/full.sub$attempts #correct.prop - proportion of correct selections, weights - number of attempts
-
+#full.sub$correct.prop <- full.sub$correct/full.sub$attempts #correct.prop - proportion of correct selections, weights - number of attempts
+#weirw.csv(full.sub, "stata.csv") #exporting data to other programs
 m8l <- glmer(correct.prop~offset(alpha) + rabs*rsgn + smoothed + n + (1|subj_id), data=filter(full.sub, plot == "L"), family="binomial", weights=attempts)
 m8s <- glmer(correct.prop~offset(alpha) + rabs*rsgn + smoothed + n + (1|subj_id), data=filter(full.sub, plot == "S"), family="binomial", weights=attempts)
 #pander(summary(m8l), justify=c('left', 'right', 'right', 'right', 'right', caption="Model fit for overlaid lines"))
 #pander(summary(m8s)$coefficients, justify=c('left', 'right', 'right', 'right', 'right'), caption="Model fit for scatter plots")
 #library(xtable)
-x <- summary(m8l)$coefficients
-y <- summary(m8s)$coefficients
-colnames(y)[4] <- "p-value"
-rownames(y) <- c("Intercept", "abs(r)", "sign(r)", "smooth", "sample size", "Interaction(r+, r-)")
-kable(x, format="latex", digits=2)
-kable(y, format="latex", digits=2)
+line.fit <- summary(m8l)$coefficients
+scatter.fit <- summary(m8s)$coefficients
+colnames(scatter.fit)[4] <- "p-value"
+rownames(scatter.fit) <- c("Intercept", "abs(r)", "sign(r)", "smooth", "sample size", "Interaction(r+, r-)")
+#colnames(line.fit)[4] <- "p-value"
+#rownames(line.fit) <- c("Intercept", "abs(r)", "sign(r)", "smooth", "sample size", "Interaction(r+, r-)")
+kable(scatter.fit, format="latex", digits=2, caption="Scatter plot")
+kable(line.fit, format="latex", digits=2, caption="Overlaid Lines")
 @
 \end{table}
 
@@ -632,30 +635,30 @@ Figure~\ref{powermodel} shows the fitted unrestricted model, with power predicti
 <<powermodel, dependson='powerfit', fig.height=6, fig.width=6, out.width='0.7\\textwidth', echo=FALSE>>=
 r <- seq(-0.9,0.9,0.02)
 n <- c(12, 24, 48, 96)
-full.pred8l <- data.frame(expand.grid(r=r, n=n, alpha=log(.05/0.95),
+predl <- data.frame(expand.grid(r=r, n=n, alpha=log(.05/0.95),
                                       smoothed=c(0,1), 
                                       subj_id=subset(full.sub, plot=="L")$subj_id)) #ranef(m4)[[1]][,1]))
-full.pred8l$rsgn <- ifelse(full.pred8l$r > 0, 1, 0)
-full.pred8l$rabs <- abs(full.pred8l$r)
-full.pred8l$fitre <- predict(m8l, full.pred8l, type="response", re.form=~(1|subj_id),
+predl$rsgn <- ifelse(predl$r > 0, 1, 0)
+predl$rabs <- abs(predl$r)
+predl$fitre <- predict(m8l, predl, type="response", re.form=~(1|subj_id),
                              allow.new.levels=TRUE)
-full.pred8l$fitfx <- predict(m8l, full.pred8l, type="response", re.form=NA,
+predl$fitfx <- predict(m8l, predl, type="response", re.form=NA,
                              allow.new.levels=TRUE)
-full.pred8l$plot <- ifelse(full.pred8l$smoothed == 0, "Overlaid Lines", "Overlaid Lines (Smoothed)")
-full.pred8l <- filter(full.pred8l, smoothed == 0 | smoothed == 1 & n==48 | smoothed ==1 & n==96)
+predl$plot <- ifelse(predl$smoothed == 0, "Overlaid Lines", "Overlaid Lines (Smoothed)")
+predl <- filter(predl, smoothed == 0 | smoothed == 1 & n==48 | smoothed ==1 & n==96)
 
-full.pred8s <- data.frame(expand.grid(r=r, n=n, alpha=log(.05/0.95),
+preds <- data.frame(expand.grid(r=r, n=n, alpha=log(.05/0.95),
                                       smoothed=c(0,1), 
                                       subj_id=subset(full.sub, plot=="S")$subj_id)) #ranef(m4)[[1]][,1]))
-full.pred8s$rsgn <- ifelse(full.pred8s$r > 0, 1, 0)
-full.pred8s$rabs <- abs(full.pred8s$r)
-full.pred8s$fitre <- predict(m8s, full.pred8s, type="response", re.form=~(1|subj_id),
+preds$rsgn <- ifelse(preds$r > 0, 1, 0)
+preds$rabs <- abs(preds$r)
+preds$fitre <- predict(m8s, preds, type="response", re.form=~(1|subj_id),
                              allow.new.levels=TRUE)
-full.pred8s$fitfx <- predict(m8s, full.pred8s, type="response", re.form=NA,
+preds$fitfx <- predict(m8s, preds, type="response", re.form=NA,
                              allow.new.levels=TRUE)
-full.pred8s$plot <- ifelse(full.pred8s$smoothed == 0, "Scatterplot", "Scatterplot (Smoothed)")
-full.pred8s <- filter(full.pred8s, smoothed == 0 | smoothed == 1 & n==48 | smoothed ==1 & n==96)
-full.pred <- rbind(full.pred8s, full.pred8l)
+preds$plot <- ifelse(preds$smoothed == 0, "Scatterplot", "Scatterplot (Smoothed)")
+preds <- filter(preds, smoothed == 0 | smoothed == 1 & n==48 | smoothed ==1 & n==96)
+full.pred <- rbind(preds, predl)
 
 
 #full.pred <- mutate(full.pred2, plot2 = ifelse(substr(plot, 1, 1) =="S", "Scatterplot", "Overlaid Lines"))
@@ -672,7 +675,7 @@ qplot(r, fitre, data=full.pred, color=plot,
 
 \begin{figure}
   \centering
-<<residuals, dependson='powerfit', fig.height=4, fig.width=6, out.width='0.7\\textwidth', echo=FALSE>>=
+<<residuals, dependson='powerfit', fig.height=4, fig.width=6, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE>>=
 resids <- resid(m8s)
 residl <- resid(m8l)
 resids[842:843] <- NA
@@ -706,12 +709,24 @@ A similar setup rejects the symmetric performance of the overlaid line graphs wi
 
 Table 2: Mixed Effects Linear Model with the dependent variable log(time). Sign = 1 if correlation > 0, 0 otherwise. Both plot designs estimated together with Overlaid Lines as the base design. Sample size: 1684. The model is fitted using the lme4 package in R.
 
-
+\begin{table}
+\label{tab2}
+\centering
+\caption{Mixed Linear Model fit for time taken to make a selection}
 <<timefit, dependson='powerfit', echo=FALSE, results='hide', message=FALSE, error=FALSE, warning=FALSE>>=
 timelmer <-  lmer(log_time ~ smoothed + r + n + rsgn*r + plot + plot*smoothed 
                   + plot*r + plot*n + plot*rsgn*r + plot*correct + (1|subj_id), data=full.sub)
-kable(summary(timelmer)$coefficients, format="latex")
+time.fit <- summary(timelmer)$coefficients
+pv <- function(x){
+  p <- 2*(1-pt(x, 1835))
+}
+p.value <- sapply(time.fit[,3], pv)
+time.fit <- cbind(time.fit, p.value)
+time.fit <- time.fit[c(1, 2, 4, 3, 5, 8, 7, 6, 9, 11, 10, 12, 14, 13),] #separate into main effects then interaction effects in same order
+kable(time.fit[1:7,], format="latex", caption="Main Effects")
+kable(time.fit[8:14,], format="latex", caption="Interaction Effects")
 @
+\end{table}
 
 While it appears that the overlaid lines are on the verge of statistical significance (at the 5\% level) for being the faster plot for a subject to visually process, this effect only holds for correlation values close to zero. The interactions between correlation and sign significantly reduce the time taken to pick the lineup for stronger correlations. Unsurprisingly, correct decisions are made faster. Surprisingly, neither smoothness nor sample size has an impact on the time for either plot design, despite having statistically significant impacts on power. An overlaid line graph having positive correlation increases the time required, eliminating the benefits from the almost significant plot design term. This result seems counter-intuitive as the weak performance of the overlaid lines in negative correlation implies that negative would require more time than positive, but the interactions between plot design, correlation and sign result in there being almost no decrease in time for strongly negatively correlated line plots.
 
