--- a/paper/TODO.txt
+++ b/paper/TODO.txt
@@ -1,28 +1,28 @@
 16/12/2015
 
 - subsectioning
-- messages
-- tables with nice row/col labels
+*- messages
+*- tables with nice row/col labels
 - formula cleanup
-- SAS
+*- SAS
 - demographics plots
 - acknowledgements: software, NSF grant 
 
 15/12/2015
 
-- chunk options, ermove messages
-- proportion differnce plot - make into errorbars
-- clean code chunks
-- remove the NA value for smooth on the last line
-- why only one pin plot. add the rest
+*- chunk options, ermove messages
+*- proportion differnce plot - make into errorbars
+*- clean code chunks
+*- remove the NA value for smooth on the last line
+*- why only one pin plot. add the rest
 - notation for the model
 - subsectioning
-- find other software to do weighted glm (SAS, ASREML)
+*- find other software to do weighted glm (SAS, ASREML)
 
 3/12/2015
 
-- Convert what you have to latex, Rnw: https://github.com/niladrir/metrics-paper
-- Handling the multiple choice - Lendie Follett's paper - adjusting calculations
+*- Convert what you have to latex, Rnw: https://github.com/niladrir/metrics-paper
+*- Handling the multiple choice - Lendie Follett's paper - adjusting calculations
 - Break into main paper and supplementary material
 
 
