--- a/paper/paper.Rnw
+++ b/paper/paper.Rnw
@@ -318,7 +318,7 @@ grid.arrange(p1a, p2a, p3a, p4a, ncol=2)
   \label{smoothing}
 \end{figure}
 
-In this research, we had three basic factors:
+The lineups were generated with three basic factors:
 
 \begin{itemize}
   \item Factor 1: Plot design, levels = scatter plot, overlaid time series
@@ -326,7 +326,7 @@ In this research, we had three basic factors:
   \item Factor 3: True plot correlation, levels 
 \end{itemize}
 
-Additionally, there was a fourth factor for  = 48, 96:
+Additionally, there was a fourth factor for $t = 48, 96$:
 
 \begin{itemize}
   \item Factor 4: Smoothed, levels = yes, no
@@ -581,12 +581,12 @@ Figures~\ref{anom1} and \ref{anom2} show lineups where a null plot with a strong
 
 A mixed effects logit model is used separately for scatter plot and overlaid line evaluations. The tested model is:
 
-$$Power_{i} = \psi\left\{ \beta_{i,0} + \beta_{i,1} \cdot |\alpha| + \beta_{i,2}\cdot Sign + \beta_{i,3}\cdot Smoothed + \beta_{i,4}\cdot t + \beta_{i,5}\cdot |\alpha| \cdot Sign + \gamma_{i,1} \cdot subject_{j} \right\}$$
+$$Power_{ijkt} = \psi\left\{ \beta_{0} + \beta_{1} x_{1,i}  + \beta_{2} x_{2,j}  + \beta_{3} x_{3,k} + \beta_{4} x_{4,t} + \beta_{5} x_{1,i} \* x_{2,j} + \gamma_{1} \cdot z_{1,s} \right\}$$
 
-Where $\psi$ is the logit link function, $\psi(x) = \frac{e^{x}}{1+e^{x}}$, $\alpha$ is the true plot correlation, Sign is the direction of $\alpha$, $i$  is the plot design and $j$ is an observer specific random effect.
+Where $\psi$ is the logit link function, $\psi(x) = \frac{e^{x}}{1+e^{x}}$, $x_{1}$ is the absolute value of the true plot correlation, with $i \in {0.3, 0.5, 0.7, 0.9}$ $x_{2,j} is a dummy variable for the sign of the true plot correlation, with $j = 0$ for negative correlation, $x_{3,k}$ is a dummy variable for the smoothing procedure, with $k = 0$ for unsmoothed data, $x_{4,t}$ is the sample size, with $t \in {12, 24, 48, 96}$ and $z_{s}$ is an observer specific random effect, with $s = 1, 2, \cdot , 157$
 
 \begin{table}[htp]
-\caption{Mixed Effects Logit Model for the predicted power of plot design. Sign = 1 if correlation > 0, 0 otherwise. Each plot design is estimated separately. Results must be transformed via the logit link function to generate a power prediction. Subjects with less than ten lineup evaluations were removed from the sample. Sample size for scatter plot model: 841, overlaid lines model: 843. The model is fitted using the lme4 package in R.}
+\caption{Weighted Mixed Effects Logit Model for the predicted power of plot design. Sample size for scatter plot model: 900, overlaid lines model: 949, total: 1849. Default plot design is an overlaid lines type. The model is fitted using the glimmix procedure in SAS. Subjects with less than ten lineup evaluations were removed from the sample. %Sign = 1 if correlation > 0, 0 otherwise. Each plot design is estimated separately. Results must be transformed via the logit link function to generate a power prediction. Subjects with less than ten lineup evaluations were removed from the sample..}
 \label{tab1}
 \centering
 <<powerfit, dependson='setup', results='asis', echo=FALSE, message=FALSE, error=FALSE, warning=FALSE>>=
@@ -610,20 +610,20 @@ full.sub$correct <- ifelse(full.sub$response_0 == full.sub$actual_location, 1, 0
 #full.sub$rneg <- ifelse(full.sub$r < 0, full.sub$r, 0)
 full.sub$alpha <- log(.05/0.95)
 #full.sub$correct.prop <- full.sub$correct/full.sub$attempts #correct.prop - proportion of correct selections, weights - number of attempts
-#weirw.csv(full.sub, "stata.csv") #exporting data to other programs
-m8l <- glmer(correct.prop~offset(alpha) + rabs*rsgn + smoothed + n + (1|subj_id), data=filter(full.sub, plot == "L"), family="binomial", weights=attempts)
-m8s <- glmer(correct.prop~offset(alpha) + rabs*rsgn + smoothed + n + (1|subj_id), data=filter(full.sub, plot == "S"), family="binomial", weights=attempts)
+#weirw.csv(full.sub, "choices.csv") #exporting data to be estimated in SAS.
+#m8l <- glmer(correct.prop~offset(alpha) + rabs*rsgn + smoothed + n + (1|subj_id), data=filter(full.sub, plot == "L"), family="binomial", weights=attempts)
+#m8s <- glmer(correct.prop~offset(alpha) + rabs*rsgn + smoothed + n + (1|subj_id), data=filter(full.sub, plot == "S"), family="binomial", weights=attempts)
 #pander(summary(m8l), justify=c('left', 'right', 'right', 'right', 'right', caption="Model fit for overlaid lines"))
 #pander(summary(m8s)$coefficients, justify=c('left', 'right', 'right', 'right', 'right'), caption="Model fit for scatter plots")
 #library(xtable)
-line.fit <- summary(m8l)$coefficients
-scatter.fit <- summary(m8s)$coefficients
-colnames(scatter.fit)[4] <- "p-value"
-rownames(scatter.fit) <- c("Intercept", "abs(r)", "sign(r)", "smoothed", "t", "Interaction(r+, r-)")
+#line.fit <- summary(m8l)$coefficients
+#scatter.fit <- summary(m8s)$coefficients
+#colnames(scatter.fit)[4] <- "p-value"
+#rownames(scatter.fit) <- c("Intercept", "abs(r)", "sign(r)", "smoothed", "t", "Interaction(r+, r-)")
 #colnames(line.fit)[4] <- "p-value"
 #rownames(line.fit) <- c("Intercept", "abs(r)", "sign(r)", "smooth", "sample size", "Interaction(r+, r-)")
-kable(scatter.fit, format="latex", digits=2, caption="Scatter plot")
-kable(line.fit, format="latex", digits=2, caption="Overlaid Lines")
+#kable(scatter.fit, format="latex", digits=2, caption="Scatter plot")
+#kable(line.fit, format="latex", digits=2, caption="Overlaid Lines")
 @
 \end{table}
 
