--- a/paper/paper.Rnw
+++ b/paper/paper.Rnw
@@ -583,17 +583,11 @@ A mixed effects logit model is used separately for scatter plot and overlaid lin
 
 $$Power_{ijkt} = \psi\left\{ \beta_{0} + \beta_{1} x_{1,i}  + \beta_{2} x_{2,j}  + \beta_{3} x_{3,k} + \beta_{4} x_{4,t} + \beta_{5} x_{1,i} \* x_{2,j} + \gamma_{1} \cdot z_{1,s} \right\}$$
 
-<<<<<<< HEAD
 Where $\psi$ is the logit link function, $\psi(x) = \frac{e^{x}}{1+e^{x}}$, $x_{1}$ is the absolute value of the true plot correlation, with $i \in {0.3, 0.5, 0.7, 0.9}$, $x_{2,j}$ is a dummy variable for the sign of the true plot correlation, with $j = 0$ for negative correlation, $x_{3,k}$ is a dummy variable for the smoothing procedure, with $k = 0$ for unsmoothed data, $x_{4,t}$ is the sample size, with $t \in {12, 24, 48, 96}$ and $z_{s}$ is an observer specific random effect, with $s = 1, 2, \cdot , 157$
 
 \begin{table}[htp]
 \caption{Weighted Mixed Effects Logit Model for the predicted power of plot design. Sample size for scatter plot evaluations: 900, overlaid lines: 949, total: 1849. Default plot design is an overlaid lines type. The model is fitted using the glimmix procedure in SAS. Subjects with less than ten lineup evaluations were removed from the sample.} %Sign = 1 if correlation > 0, 0 otherwise. Each plot design is estimated separately. Results must be transformed via the logit link function to generate a power prediction. Subjects with less than ten lineup evaluations were removed from the sample.
-=======
-Where $\psi$ is the logit link function, $\psi(x) = \frac{e^{x}}{1+e^{x}}$, $x_{1}$ is the absolute value of the true plot correlation, with $i \in {0.3, 0.5, 0.7, 0.9}$ $x_{2,j}$ is a dummy variable for the sign of the true plot correlation, with $j = 0$ for negative correlation, $x_{3,k}$ is a dummy variable for the smoothing procedure, with $k = 0$ for unsmoothed data, $x_{4,t}$ is the sample size, with $t \in {12, 24, 48, 96}$ and $z_{s}$ is an observer specific random effect, with $s = 1, 2, \cdot , 157$
 
-\begin{table}[htp]
-\caption{Weighted Mixed Effects Logit Model for the predicted power of plot design. Sample size for scatter plot model: 900, overlaid lines model: 949, total: 1849. Default plot design is an overlaid lines type. The model is fitted using the glimmix procedure in SAS. Subjects with less than ten lineup evaluations were removed from the sample.} %Sign = 1 if correlation > 0, 0 otherwise. Each plot design is estimated separately. Results must be transformed via the logit link function to generate a power prediction. Subjects with less than ten lineup evaluations were removed from the sample..}
->>>>>>> 87129b971f8f6cb5753df99d05dcb503ec04b02c
 \label{tab1}
 \centering
 <<powerfit, dependson='setup', results='asis', echo=FALSE, message=FALSE, error=FALSE, warning=FALSE>>=
@@ -639,8 +633,8 @@ t <- c(12, 24, 48, 96)
 #write.csv(pred, "sas/predgrid.csv") # these lines are done, but its a large file so commented out for knitr
 #Code exported to sas, see sas/model\ fit.sas
 prediction <- read.csv("sas/predfit.csv") #Large file, very slow
-rownames(prediction) <- c("rabs", "t", "alpha", "rsgn", "smoothed", "plot", "subj_id", "weights", "detected", "RandomEf", "FixedEf", "resid")
-resid <- subset(prediction, detected==0 | detected==1)
+colnames(prediction) <- c("rabs", "t", "alpha", "rsgn", "smoothed", "plot", "subj_id", "weights", "detected", "RandomEf", "FixedEf", "residual")
+glmm.resid <- subset(prediction, detected==0 | detected==1)
 prediction <- mutate(prediction, r = ifelse(rsgn==1, rabs, -rabs), plot = ifelse(plot==1, "Overlaid Lines", "Scatterplot"), plot = ifelse(smoothed==1, paste(plot, "(Smoothed)", sep=" "), plot))
 prediction <- select(prediction, rabs, t, rsgn, smoothed, plot, subj_id, RandomEf, FixedEf)
 prediction <- mutate(prediction, RandomEf = exp(RandomEf)/(1+exp(RandomEf)), FixedEf = exp(FixedEf)/(1+exp(FixedEf)))
@@ -658,13 +652,9 @@ qplot(r, RandomEf, data=prediction, color=plot,
 \begin{figure}
   \centering
 <<residuals, dependson='powerfit', fig.height=4, fig.width=6, out.width='0.7\\textwidth', echo=FALSE, warning=FALSE>>=
-resids <- subset(resid, plot==1)
-residl <- subset(resid, plot==0)
-#resids[842:843] <- NA  #fix residual stuff later
-#resid <- data.frame(line = residl, scatter = resids)
-#p1b <- ggplot(data=resid[1:841,]) + geom_histogram(aes(y=..density.., x=scatter)) + labs(title="Scatter plot", x="residual", y=element_blank())
-#p2b <- ggplot(data=resid) + geom_histogram(aes(y=..density.., x=line))+ labs(title="Overlaid Lines", x="residual", y=element_blank())
-#grid.arrange(p1b, p2b, ncol=2, top = "Residual density plots")
+p1b <- ggplot(data=subset(glmm.resid, plot==1)) + geom_histogram(aes(y=..density.., x=residual)) + labs(title="Scatter plot", x="residual", y=element_blank())
+p2b <- ggplot(data=subset(glmm.resid, plot==0)) + geom_histogram(aes(y=..density.., x=residual))+ labs(title="Overlaid Lines", x="residual", y=element_blank())
+grid.arrange(p1b, p2b, ncol=2, top = "Residual density plots")
 @
   \label{residuals}
   \caption{Histograms of residuals for both the scatter plot (left) and the overlaid lines (right).}
